tooling/nargo_cli/tests/snapshots/execution_success/regression_9329/execute__tests__force_brillig_false_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "b",
        "type": {
          "kind": "array",
          "length": 2,
          "type": {
            "kind": "integer",
            "sign": "signed",
            "width": 8
          }
        },
        "visibility": "private"
      }
    ],
    "return_type": {
      "abi_type": {
        "kind": "integer",
        "sign": "signed",
        "width": 8
      },
      "visibility": "public"
    },
    "error_types": {
      "9579943917905940306": {
        "error_kind": "string",
        "string": "attempt to add with overflow"
      }
    }
  },
  "bytecode": [
    "func 0",
    "current witness index : _20",
    "private parameters indices : [_0, _1]",
    "public parameters indices : []",
    "return value indices : [_2]",
    "BLACKBOX::RANGE [(_0, 8)] []",
    "BLACKBOX::RANGE [(_1, 8)] []",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _1) 1 ], EXPR [ 256 ]], outputs: [_3, _4]",
    "BLACKBOX::RANGE [(_3, 1)] []",
    "BLACKBOX::RANGE [(_4, 8)] []",
    "EXPR [ (1, _1) (-256, _3) (-1, _4) 1 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _1) 128 ], EXPR [ 256 ]], outputs: [_5, _6]",
    "BLACKBOX::RANGE [(_5, 1)] []",
    "BLACKBOX::RANGE [(_6, 8)] []",
    "EXPR [ (1, _1) (-256, _5) (-1, _6) 128 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _4) 128 ], EXPR [ 256 ]], outputs: [_7, _8]",
    "BLACKBOX::RANGE [(_7, 1)] []",
    "BLACKBOX::RANGE [(_8, 8)] []",
    "EXPR [ (1, _4) (-256, _7) (-1, _8) 128 ]",
    "EXPR [ (1, _5) (-1, _7) (-1, _9) 0 ]",
    "BRILLIG CALL func 1: inputs: [EXPR [ (1, _9) 0 ]], outputs: [_10]",
    "EXPR [ (1, _9, _10) (1, _11) -1 ]",
    "EXPR [ (1, _9, _11) 0 ]",
    "EXPR [ (-1, _5, _11) (1, _5) (1, _11) -1 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _1) 1 ], EXPR [ 256 ]], outputs: [_12, _13]",
    "BLACKBOX::RANGE [(_12, 1)] []",
    "EXPR [ (1, _1) (-256, _12) (-1, _13) 1 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _1) 128 ], EXPR [ 256 ]], outputs: [_14, _15]",
    "BLACKBOX::RANGE [(_14, 1)] []",
    "BLACKBOX::RANGE [(_15, 8)] []",
    "EXPR [ (1, _1) (-256, _14) (-1, _15) 128 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _13) 128 ], EXPR [ 256 ]], outputs: [_16, _17]",
    "BLACKBOX::RANGE [(_16, 1)] []",
    "BLACKBOX::RANGE [(_17, 8)] []",
    "EXPR [ (1, _13) (-256, _16) (-1, _17) 128 ]",
    "EXPR [ (1, _14) (-1, _16) (-1, _18) 0 ]",
    "BRILLIG CALL func 1: inputs: [EXPR [ (1, _18) 0 ]], outputs: [_19]",
    "EXPR [ (1, _18, _19) (1, _20) -1 ]",
    "EXPR [ (1, _18, _20) 0 ]",
    "EXPR [ (-1, _14, _20) (1, _14) (1, _20) -1 ]",
    "EXPR [ (1, _13) -21 ]",
    "EXPR [ (1, _2) -21 ]",
    "unconstrained func 0",
    "[Const { destination: Direct(10), bit_size: Integer(U32), value: 2 }, Const { destination: Direct(11), bit_size: Integer(U32), value: 0 }, CalldataCopy { destination_address: Direct(0), size_address: Direct(10), offset_address: Direct(11) }, BinaryFieldOp { destination: Direct(2), op: IntegerDiv, lhs: Direct(0), rhs: Direct(1) }, BinaryFieldOp { destination: Direct(1), op: Mul, lhs: Direct(2), rhs: Direct(1) }, BinaryFieldOp { destination: Direct(1), op: Sub, lhs: Direct(0), rhs: Direct(1) }, Mov { destination: Direct(0), source: Direct(2) }, Stop { return_data: HeapVector { pointer: Direct(11), size: Direct(10) } }]",
    "unconstrained func 1",
    "[Const { destination: Direct(21), bit_size: Integer(U32), value: 1 }, Const { destination: Direct(20), bit_size: Integer(U32), value: 0 }, CalldataCopy { destination_address: Direct(0), size_address: Direct(21), offset_address: Direct(20) }, Const { destination: Direct(2), bit_size: Field, value: 0 }, BinaryFieldOp { destination: Direct(3), op: Equals, lhs: Direct(0), rhs: Direct(2) }, JumpIf { condition: Direct(3), location: 8 }, Const { destination: Direct(1), bit_size: Field, value: 1 }, BinaryFieldOp { destination: Direct(0), op: Div, lhs: Direct(1), rhs: Direct(0) }, Stop { return_data: HeapVector { pointer: Direct(20), size: Direct(21) } }]"
  ],
  "debug_symbols": "[debug_symbols]",
  "file_map": "[file_map]",
  "names": [
    "main"
  ],
  "brillig_names": [
    "directive_integer_quotient",
    "directive_invert"
  ]
}
